--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
     </header>
 
     <main>
-      <h1>Pet planet - магазин товаров для животных </h1>
+      <h1 class="visually-hidden"> Pet planet - магазин товаров для животных </h1>
 
       <section class="hero">
         <div class="container">
-          <h2> Товары для твоих любимцев </h2>
+          <h2 class="visually-hidden"> Товары для твоих любимцев </h2>
           <img src="./img/tittle.svg" alt="Товары для твоих любимцев">
           <p class="hero__text"> Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак </p>
         </div>
