--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Pet planet - магазин товаров для животных </title>
-    <link rel="stylesheet" href="scss/index.scss">
+    <link rel="stylesheet" href="scss/index.scss"> <!-- так можно покдлючат тлько если есть сборщик -->
   </head>
 
   <body>
