--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
                 <form class="subscribe__form" action="#" method="post">
                     <h2 class="subscribe__title"> Подпишись на&nbsp;рассылку и&nbsp;узнавай о&nbsp;новинках первым!
                     </h2>
-                    <fieldset class="subscribe__field">
+                    <fieldset class="subscribe__fieldset">
                         <input class="subscribe__input" type="email" name="email" placeholder="E-mail">
                         <button class="subscribe__button" type="submit"> Отправить </button>
                     </fieldset>
@@ -97,8 +97,8 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <img src="./img/logo.svg" alt="Логотип с лапой животного">
+        <div class="container footer__container">
+            <img class="footer__logo" src="./img/logo.svg" alt="Логотип с лапой животного">
 
             <div class="footer__info">
                 <p class="footer__copyright"> ©Petshop, 2024 </p>
