--- a/src/index.html
+++ b/src/index.html
@@ -103,10 +103,10 @@
             <div class="footer__info">
                 <p class="footer__copyright"> ©Petshop, 2024 </p>
                 <p class="footer__text"> Проект сделан в учебных целях </p>
-                <ul class="footer__list">
+                <ul class="footer__social-list">
                     <li class="footer__item"> Designer: <a class="footer__link" href="https://t.me/Mrshmallowww"
                             target="_blank">Anastasia Iliina </a></li>
-                    <li class="footer__item"> Deweloper: <a class="footer__link" href=""> Rufina </a> </li>
+                    <li class="footer__item"> Developer: <a class="footer__link" href=""> Rufina </a> </li>
                 </ul>
             </div>
 
