--- a/src/index.html
+++ b/src/index.html
@@ -52,25 +52,25 @@
         <section class="advantages">
             <div class="advantages__bg">
                 <div class="container">
-                    <h2 class="advantages__title"> </h2>
+                    <h2 class="advantages__title"> Наши преимущества </h2>
 
                     <ul class="advantages__list">
-                        <li class="advantages__item">
-                            <!-- картинку сделаем через css, тк она не несет никакой информации -->
+                        <li class="advantages__item advantages__item--assortiment">
+                            <!-- картинку сделаем, тк она не несет никакой информации -->
                             <h3 class="advantages__subtitle"> Широкий ассортимент </h3>
                             <p class="advantages__text"> У&nbsp;нас есть все для того, чтобы сделать жизнь вашего
                                 любимца комфортной и&nbsp;уютной.</p>
                         </li>
 
-                        <li class="advantages__item">
-                            <!-- картинку сделаем через css, тк она не несет никакой информации -->
-                            <h3 class="advantages__subtitle"> Качество и безопасность </h3>
+                        <li class="advantages__item advantages__item--quality">
+                            <!-- картинку сделаем , тк она не несет никакой информации -->
+                            <h3 class="advantages__subtitle"> Качество и&nbsp;безопасность </h3>
                             <p class="advantages__text"> Мы&nbsp;тщательно отбираем товары для наших клиентов, уделяя
                                 особое внимание качеству и&nbsp;безопасности. </p>
                         </li>
 
-                        <li class="advantages__item">
-                            <!-- картинку сделаем через css, тк она не несет никакой информации -->
+                        <li class="advantages__item advantages__item--person">
+                            <!-- картинку сделаем, тк она не несет никакой информации -->
                             <h3 class="advantages__subtitle"> Персональный подход </h3>
                             <p class="advantages__text"> Мы&nbsp;понимаем, что каждый питомец уникален, поэтому
                                 предлагаем вам индивидуальные рекомендации по&nbsp;выбору товаров.</p>
@@ -78,7 +78,11 @@
                     </ul>
 
                 </div>
-                <!-- звездочка -->
+
+                <div class="advantages__count-box">
+                    <p class="about__count">10</p>
+                    <p class="about__count-text">магазинов сети</p>
+                </div>
             </div>
         </section>
 
