add styles for advantages

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 
                 </div>
 
-                <div class="advantages__count-box">
+                <div class="advantages__count-box about">
                     <p class="about__count">10</p>
                     <p class="about__count-text">магазинов сети</p>
                 </div>
