add media queries

--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,11 @@
                                 предлагаем вам индивидуальные рекомендации по&nbsp;выбору товаров.</p>
                         </li>
                     </ul>
-
                 </div>
 
                 <div class="advantages__count-box about">
                     <p class="about__count">10</p>
-                    <p class="about__count-text">магазинов сети</p>
+                    <p class="about__count-text">магазинов в&nbsp;сети</p>
                 </div>
             </div>
         </section>
