add media requires

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,8 @@
                     </h2>
                     <fieldset class="subscribe__fieldset">
                         <input class="subscribe__input" type="email" name="email" placeholder="E-mail">
-                        <button class="subscribe__button" type="submit"> Отправить </button>
+                        <button class="subscribe__button" type="submit">
+                            <span class="subscribe__button-text">Отправить</span> </button>
                     </fieldset>
                 </form>
             </div>
