--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 <body>
     <header class="header">
         <div class="container">
-            <img class="header__logo" src="./img/logo.svg" alt="Логотип c лапой магазина Pet planet">
+            <img class="header__logo" src="./img/logo.svg" width="331" height="57"
+                alt="Логотип c лапой магазина Pet planet">
         </div>
     </header>
 
@@ -26,7 +27,8 @@
         <section class="hero">
             <div class="container">
                 <h2 class="visually-hidden"> Товары для твоих любимцев </h2>
-                <img class="hero__title" src="./img/tittle.svg" alt="Товары для твоих любимцев">
+                <img class="hero__title" src="./img/tittle.svg" width="810" height="215"
+                    alt="Товары для твоих любимцев">
                 <p class="hero__text"> Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак </p>
             </div>
         </section>
@@ -102,7 +104,7 @@
 
     <footer class="footer">
         <div class="container footer__container">
-            <img class="footer__logo" src="./img/logo.svg" alt="Логотип с лапой животного">
+            <img class="footer__logo" src="./img/logo.svg" width="331" height="57" alt="Логотип с лапой животного">
 
             <div class="footer__info">
                 <p class="footer__copyright"> ©Petshop, 2024 </p>
