add styles for product

--- a/src/store.html
+++ b/src/store.html
@@ -84,8 +84,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store2.jpg" alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                            <img class="product__image" src="/img/store2.jpg" alt="Домик со съемной  крышей">
+                            <h3 class="product__title"> Домик со съемной  крышей </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
@@ -93,8 +93,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store3.jpg" alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                            <img class="product__image" src="/img/store3.jpg" alt="Домик для кошки  с когтеточкой">
+                            <h3 class="product__title"> Домик для кошки  с когтеточкой </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
@@ -102,8 +102,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store4.jpg" alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                            <img class="product__image" src="/img/store4.jpg" alt="Домик шар  для питомцев">
+                            <h3 class="product__title"> Домик шар  для питомцев </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
@@ -111,16 +111,16 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store5.jpg" alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                            <img class="product__image" src="/img/store5.jpg" alt="Домик для собак">
+                            <h3 class="product__title"> Домик для собак </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
                     </li>
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store6.jpg" alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                            <img class="product__image" src="/img/store6.jpg" alt="Домик-конус  для питомцев">
+                            <h3 class="product__title"> Домик-конус  для питомцев </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
