--- a/src/store.html
+++ b/src/store.html
@@ -73,9 +73,10 @@
 
                 <h2 class="store__title"> Каталог </h2>
                 <ul class="store__list">
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store1.jpg" alt="Скандинавский домик для собаки">
+                            <img class="product__image" src="/img/store1.jpg" width="388" height="261"
+                                alt="Скандинавский домик для собаки">
                             <h3 class="product__title"> Скандинавский домик для собаки </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
@@ -84,7 +85,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store2.jpg" alt="Домик со съемной  крышей">
+                            <img class="product__image" src="/img/store2.jpg" width="388" height="261"
+                                alt="Домик со съемной  крышей">
                             <h3 class="product__title"> Домик со съемной  крышей </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
@@ -93,7 +95,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store3.jpg" alt="Домик для кошки  с когтеточкой">
+                            <img class="product__image" src="/img/store3.jpg" width="388" height="261"
+                                alt="Домик для кошки  с когтеточкой">
                             <h3 class="product__title"> Домик для кошки  с когтеточкой </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
@@ -102,7 +105,8 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store4.jpg" alt="Домик шар  для питомцев">
+                            <img class="product__image" src="/img/store4.jpg" width="388" height="261"
+                                alt="Домик шар  для питомцев">
                             <h3 class="product__title"> Домик шар  для питомцев </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
@@ -111,20 +115,23 @@
 
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store5.jpg" alt="Домик для собак">
+                            <img class="product__image" src="/img/store5.jpg" width="388" height="261"
+                                alt="Домик для собак">
                             <h3 class="product__title"> Домик для собак </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
                     </li>
+
                     <li class="store__item">
                         <article class="store__product product">
-                            <img class="product__image" src="/img/store6.jpg" alt="Домик-конус  для питомцев">
+                            <img class="product__image" src="/img/store6.jpg" width="388" height="261"
+                                alt="Домик-конус  для питомцев">
                             <h3 class="product__title"> Домик-конус  для питомцев </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </section>
