--- a/src/store.html
+++ b/src/store.html
@@ -188,6 +188,28 @@
             </address>
         </div>
     </footer>
+
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <div class="modal__content">
+                <h2> Корзина </h2>
+                <ul class="'modal__cart-items">
+                    <li class="modal__cart-item">
+                        <img src="" alt="">
+                        <p class="title"></p>
+                        <div class="controller">
+                            <button>-</button>
+                            <span></span>
+                            <button>+</button>
+                        </div>
+                        <p class="price"></p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <button class="modal-overlay__close-button">&times;</button>
+    </div>
 </body>
 
 </html>
