--- a/src/store.html
+++ b/src/store.html
@@ -41,19 +41,19 @@
                 <div class="store__header">
                     <ul class="store__categories">
                         <li class="store__category-item">
-                            <button class="store__category-button store__category-button--active"> Домики </button>
+                            <button class="store__category-button store__category-button--active">Домики</button>
                         </li>
 
                         <li class="store__category-item">
-                            <button class="store__category-button"> Лежанки </button>
+                            <button class="store__category-button">Лежанки</button>
                         </li>
 
                         <li class="store__category-item">
-                            <button class="store__category-button"> Игрушки </button>
+                            <button class="store__category-button">Игрушки</button>
                         </li>
 
                         <li class="store__category-item">
-                            <button class="store__category-button"> Корма </button>
+                            <button class="store__category-button">Корма</button>
                         </li>
                     </ul>
 
@@ -194,7 +194,7 @@
         <div class="modal">
             <div class="modal__content">
                 <h2> Корзина </h2>
-                <ul class="'modal__cart-items">
+                <ul class="modal__cart-items">
                     <li class="modal__cart-item">
                         <img src="" alt="">
                         <p class="title"></p>
