--- a/src/store.html
+++ b/src/store.html
@@ -195,7 +195,7 @@
             <div class="modal__content">
                 <h2> Корзина </h2>
                 <ul class="modal__cart-items">
-                    <li class="modal__cart-item">
+                    <!-- <li class="modal__cart-item">
                         <img src="" alt="">
                         <p class="title"></p>
                         <div class="controller">
@@ -203,8 +203,8 @@
                             <span></span>
                             <button>+</button>
                         </div>
-                        <p class="price"></p>
-                    </li>
+                        <p class="price">7200 ₽</p>
+                    </li> -->
                 </ul>
             </div>
         </div>
