add cartItem style

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h2 class="visually-hidden"> Товары для твоих любимцев </h2>
                 <img class="hero__title" src="./img/tittle.svg" width="810" height="215"
-                    alt="Товары для твоих любимцев">
+                    alt="Товары для твоих любимцев"> <!--собаку сделали через img, ттк она несет информацию важную-->
                 <p class="hero__text"> Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак </p>
                 <a class="hero__store-link" href="/store.html"> Перейти в магазин </a>
             </div>
@@ -59,21 +59,21 @@
 
                     <ul class="advantages__list">
                         <li class="advantages__item advantages__item--assortiment">
-                            <!-- картинку сделаем, тк она не несет никакой информации -->
+                            <!-- картинку сделаем в css, тк она не несет никакой информации -->
                             <h3 class="advantages__subtitle"> Широкий ассортимент </h3>
                             <p class="advantages__text"> У&nbsp;нас есть все для того, чтобы сделать жизнь вашего
                                 любимца комфортной и&nbsp;уютной.</p>
                         </li>
 
                         <li class="advantages__item advantages__item--quality">
-                            <!-- картинку сделаем , тк она не несет никакой информации -->
+                            <!-- картинку сделаем в css, тк она не несет никакой информации -->
                             <h3 class="advantages__subtitle"> Качество и&nbsp;безопасность </h3>
                             <p class="advantages__text"> Мы&nbsp;тщательно отбираем товары для наших клиентов, уделяя
                                 особое внимание качеству и&nbsp;безопасности. </p>
                         </li>
 
                         <li class="advantages__item advantages__item--person">
-                            <!-- картинку сделаем, тк она не несет никакой информации -->
+                            <!-- картинку сделаем в css, тк она не несет никакой информации -->
                             <h3 class="advantages__subtitle"> Персональный подход </h3>
                             <p class="advantages__text"> Мы&nbsp;понимаем, что каждый питомец уникален, поэтому
                                 предлагаем вам индивидуальные рекомендации по&nbsp;выбору товаров.</p>
