--- a/src/store.html
+++ b/src/store.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <h2 class="visually-hidden"> Товары для твоих любимцев </h2>
                 <img class="hero__title" src="./img/tittle.svg" width="810" height="215"
-                    alt="Товары для твоих любимцев">
+                    alt="Товары для твоих любимцев"> <!-- сделали через img, тк  несет важную инфрмацию -->
                 <p class="hero__text"> Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак </p>
             </div>
         </section>
@@ -76,14 +76,14 @@
                     <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store1.jpg" width="388" height="261"
-                                alt="Скандинавский домик для собаки">
-                            <h3 class="product__title"> Скандинавский домик для собаки </h3>
+                                alt="Скандинавский домик для собаки"> сделали через img, тк  несет важдную инормацию  -->
+                    <!-- <h3 class="product__title"> Скандинавский домик для собаки </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
 
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store2.jpg" width="388" height="261"
                                 alt="Домик со съемной  крышей">
@@ -91,9 +91,9 @@
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
 
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store3.jpg" width="388" height="261"
                                 alt="Домик для кошки  с когтеточкой">
@@ -101,9 +101,9 @@
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
 
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store4.jpg" width="388" height="261"
                                 alt="Домик шар  для питомцев">
@@ -111,9 +111,9 @@
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
 
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store5.jpg" width="388" height="261"
                                 alt="Домик для собак">
@@ -121,9 +121,9 @@
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart"> Заказать</button>
                         </article>
-                    </li>
+                    </li> -->
 
-                    <li class="store__item">
+                    <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store6.jpg" width="388" height="261"
                                 alt="Домик-конус  для питомцев">
@@ -194,8 +194,23 @@
         <div class="modal">
             <div class="modal__content">
                 <h2 class="modal__title"> Корзина </h2>
+
                 <ul class="modal__cart-items">
                     <li class="modal__cart-item">
+                        <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
+
+                        <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
+
+                        <div class="modal__cart-item-count">
+                            <button class="modal__minus">-</button>
+                            <span class="modal__count">1</span>
+                            <button class="modal__plus">+</button>
+                        </div>
+
+                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
+                    </li>
+
+                    <!-- <li class="modal__cart-item">
                         <img class="modal__cart-item-image" src="img/store1.jpg" alt="">
 
                         <h3 class="title">Домик-конус для питомцев</h3>
@@ -207,9 +222,9 @@
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
+                    </li> -->
 
-                    <li class="modal__cart-item">
+                    <!-- <li class="modal__cart-item">
                         <img class="modal__cart-item-image" src="img/store1.jpg" alt="">
 
                         <h3 class="title">Домик-конус для питомцев</h3>
@@ -221,21 +236,7 @@
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
-
-                    <li class="modal__cart-item">
-                        <img class="modal__cart-item-image" src="img/store1.jpg" alt="">
-
-                        <h3 class="title">Домик-конус для питомцев</h3>
-
-                        <div class="modal__cart-item-count">
-                            <button class="modal__minus">-</button>
-                            <span class="modal__count">1</span>
-                            <button class="modal__plus">+</button>
-                        </div>
-
-                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <form>
