add modals style

--- a/src/store.html
+++ b/src/store.html
@@ -202,9 +202,37 @@
                         <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
 
                         <div class="modal__cart-item-count">
-                            <button class="modal__minus">-</button>
+                            <button class="modal__btn modal__minus">-</button>
                             <span class="modal__count">1</span>
-                            <button class="modal__plus">+</button>
+                            <button class="modal__btn modal__plus">+</button>
+                        </div>
+
+                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
+                    </li>
+
+                    <li class="modal__cart-item">
+                        <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
+
+                        <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
+
+                        <div class="modal__cart-item-count">
+                            <button class="modal__btn modal__minus">-</button>
+                            <span class="modal__count">1</span>
+                            <button class="modal__btn modal__plus">+</button>
+                        </div>
+
+                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
+                    </li>
+
+                    <li class="modal__cart-item">
+                        <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
+
+                        <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
+
+                        <div class="modal__cart-item-count">
+                            <button class="modal__btn modal__minus">-</button>
+                            <span class="modal__count">1</span>
+                            <button class="modal__btn modal__plus">+</button>
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
