add radiobatton styles

--- a/src/store.html
+++ b/src/store.html
@@ -270,7 +270,7 @@
                 <form>
                     <fieldset class="modal__cart-fieldset">
                         <legend class="modal__cart-legend">Самовывоз из магазина:</legend>
-                        <label class="modal__radio radio">
+                        <label class="modal__radio radio"> <!--при нажатии на текст, будт надиматься радиобаттон-->
                             ул. Адамавая 45/1
                             <input class="radio__input" type="radio" name="store" value="1" checked>
                         </label>
@@ -287,7 +287,7 @@
                     </fieldset>
 
                     <div class="modal__cart-footer">
-                        <button type="submit">Заказать</button>
+                        <button class="modal__cart-button" type="submit">Заказать</button>
                         <p class="modal__cart-price">12900&nbsp;Р</p>
                     </div>
                 </form>
