--- a/src/store.html
+++ b/src/store.html
@@ -79,7 +79,7 @@
                                 alt="Скандинавский домик для собаки"> сделали через img, тк  несет важдную инормацию  -->
                     <!-- <h3 class="product__title"> Скандинавский домик для собаки </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
-                            <button class="product__btn-add-cart"> Заказать</button>
+                            <button class="product__btn-add-cart" data-id=""> Заказать</button>
                         </article>
                     </li> -->
 
@@ -196,7 +196,21 @@
                 <h2 class="modal__title"> Корзина </h2>
 
                 <ul class="modal__cart-items">
-                    <li class="modal__cart-item">
+                    <!-- <li class="modal__cart-item">
+                        <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
+
+                        <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
+
+                        <div class="modal__cart-item-count">
+                            <button class="modal__btn modal__minus" data-id="">-</button>
+                            <span class="modal__count">1</span>
+                            <button class="modal__btn modal__plus" data-id="">+</button>
+                        </div>
+
+                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
+                    </li> -->
+
+                    <!-- <li class="modal__cart-item">
                         <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
 
                         <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
@@ -208,35 +222,21 @@
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
+                    </li> -->
 
-                    <li class="modal__cart-item">
+                    <!-- <li class="modal__cart-item">
                         <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
 
                         <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
 
                         <div class="modal__cart-item-count">
-                            <button class="modal__btn modal__minus">-</button>
+                            <button class="modal__btn modal__minus" data-id="">-</button>
                             <span class="modal__count">1</span>
-                            <button class="modal__btn modal__plus">+</button>
+                            <button class="modal__btn modal__plus" data-id="">+</button>
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
-
-                    <li class="modal__cart-item">
-                        <img class="modal__cart-item-image" src="img/store1.jpg" width="54" height="54" alt="">
-
-                        <h3 class="modal__cart-item-title">Домик-конус для питомцев</h3>
-
-                        <div class="modal__cart-item-count">
-                            <button class="modal__btn modal__minus">-</button>
-                            <span class="modal__count">1</span>
-                            <button class="modal__btn modal__plus">+</button>
-                        </div>
-
-                        <p class="modal__cart-item-price">7200&nbsp;₽</p>
-                    </li>
+                    </li> -->
 
                     <!-- <li class="modal__cart-item">
                         <img class="modal__cart-item-image" src="img/store1.jpg" alt="">
@@ -258,9 +258,9 @@
                         <h3 class="title">Домик-конус для питомцев</h3>
 
                         <div class="modal__cart-item-count">
-                            <button class="modal__minus">-</button>
+                            <button class="modal__minus" data-id="">-</button>
                             <span class="modal__count">1</span>
-                            <button class="modal__plus">+</button>
+                            <button class="modal__plus" data-id="">+</button>
                         </div>
 
                         <p class="modal__cart-item-price">7200&nbsp;₽</p>
