--- a/src/store.html
+++ b/src/store.html
@@ -267,7 +267,7 @@
                     </li> -->
                 </ul>
 
-                <form>
+                <form class="modal__cart-form">
                     <fieldset class="modal__cart-fieldset">
                         <legend class="modal__cart-legend">Самовывоз из магазина:</legend>
                         <label class="modal__radio radio"> <!--при нажатии на текст, будт надиматься радиобаттон-->
