--- a/src/store.html
+++ b/src/store.html
@@ -76,7 +76,7 @@
                     <!-- <li class="store__item">
                         <article class="store__product product">
                             <img class="product__image" src="/img/store1.jpg" width="388" height="261"
-                                alt="Скандинавский домик для собаки"> сделали через img, тк  несет важдную инормацию  -->
+                                alt="Скандинавский домик для собаки"> сделали через img, тк  несет важную инормацию, задали width height чтоб изображени не прыгали  -->
                     <!-- <h3 class="product__title"> Скандинавский домик для собаки </h3>
                             <p class="product__price"> 5400&nbsp;₽ </p>
                             <button class="product__btn-add-cart" data-id=""> Заказать</button>
